--- a/EmployeeRecordMgmt/employee/templates/header.html
+++ b/EmployeeRecordMgmt/employee/templates/header.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="#"><i class="fa fa-home"></i>Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'registration.html'%}"><i class="fas fa-sign-in-alt "></i>Employee
+                <a class="nav-link" href="{% url 'registration'%}"><i class="fas fa-sign-in-alt "></i>Employee
                     Signup</a>
             </li>
             <li class="nav-item">
