Day 3 initialized the signup page and rendered the emp_login functionality across the model

--- a/EmployeeRecordMgmt/employee/templates/registration.html
+++ b/EmployeeRecordMgmt/employee/templates/registration.html
@@ -1,4 +1,5 @@
 {% include 'header.html'%}
+{% include 'emp_login.html'%}
 
 <script>
     function checkpassword() {
@@ -72,3 +73,17 @@
         </div>
     </div>
 </div>
+
+{% if error == "no" %}
+<script>
+    alert('Signup Succesful');
+    window.location = ('{% url 'emp_login' %}');
+</script>
+{% endif %}
+{% if error == "yes" %}
+
+<script>
+    alert('Something went wrong, Try Again');
+
+</script>
+{% endif %}
