--- a/EmployeeRecordMgmt/employee/templates/header.html
+++ b/EmployeeRecordMgmt/employee/templates/header.html
@@ -26,11 +26,11 @@
                 <a class="nav-link" href="#"><i class="fa fa-home"></i>Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'registration'%}"><i class="fas fa-sign-in-alt "></i>Employee
+                <a class="nav-link" href="{% url 'registration' %}"><i class="fas fa-sign-in-alt "></i>Employee
                     Signup</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-sign-in-alt "></i>Employee Login</a>
+                <a class="nav-link" href="{% url 'emp_login' %}"><i class="fas fa-sign-in-alt "></i>Employee Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#"><i class="fas fa-sign-in-alt "></i>Admin Login</a>
