--- a/EmployeeRecordMgmt/employee/templates/emp_base.html
+++ b/EmployeeRecordMgmt/employee/templates/emp_base.html
@@ -15,15 +15,52 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" </head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+    <style>
+        .list-group-item {
+            padding: 8px !important;
+        }
+    </style>
+
+</head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2">
-                <img src="" </div>
+            <div class="col-sm-2 p-0">
+                <center><img src="{%static 'images/icon.jpeg' %}" width="100" height="100"
+                        class="img-thumbnail rounded-circle my-3"></center>
+                <div class="list-group">
+                    <a href="{% url 'emp_home'%}"
+                        class="list-group-item list-group-item-warning list-group-item-action {% if request.path == '/emp_home' %} active{% endif %}">Dashboard</a>
+                    <a href="{% url 'profile' %}" class="list-group-item list-group-item-action">Profile</a>
+                    <a href="" class="list-group-item list-group-item-warning list-group-item-action">My Experience</a>
+                    <a href="" class="list-group-item list-group-item-action">Edit My Experience</a>
+                    <a href="" class="list-group-item  list-group-item-warning list-group-item-action">My Education</a>
+                    <a href="" class="list-group-item list-group-item-action">Edit My Education</a>
+                    <a href="" class="list-group-item list-group-item-warning list-group-item-action">Change
+                        Password</a>
+                    <a href="" class="list-group-item list-group-item-action">Logout</a>
+                </div>
+            </div>
+
+            <div class="col-sm-10 p-0">
+                <div class="container-fluid p-2">
+                    <h5 class="text-center p-3 font-weight-bold"
+                        style=" border-bottom : 2px solid green; border-top : 2px solid green"> Employee
+                        Record Management System</h5>
+
+                    <div class="card shadow" style=" min-height : 89vh">
+                        <div class=" card-body">
+                            {% block main %}
+
+                            {% endblock %}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 
 </body>
 
