--- a/EmployeeRecordMgmt/employee/templates/emp_base.html
+++ b/EmployeeRecordMgmt/employee/templates/emp_base.html
@@ -28,8 +28,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-2 p-0">
-                <center><img src="{%static 'images/icon.jpeg' %}" width="100" height="100"
-                        class="img-thumbnail rounded-circle my-3"></center>
+                <center>
+                    <img src="{%static 'images/icon.jpeg' %}" width="100" height="100"
+                        class="img-thumbnail rounded-circle my-3">
+                </center>
                 <div class="list-group">
                     <a href="{% url 'emp_home'%}"
                         class="list-group-item list-group-item-warning list-group-item-action {% if request.path == '/emp_home' %} active{% endif %}">Dashboard</a>
