--- a/EmployeeRecordMgmt/employee/templates/profile.html
+++ b/EmployeeRecordMgmt/employee/templates/profile.html
@@ -23,14 +23,14 @@
                         <div class="form-group">
                             <label>Last Name</label>
                             <input type="text" name="lastname" class="form-control" placeholder="Enter Last Name"
-                                pattern="[A-Za-z]+" required>
+                                pattern="[A-Za-z]+" value="{{employee.user.last_name}}">
                         </div>
                     </div>
                     <div class="col-sm-12">
                         <div class="form-group">
                             <label>Employee Code </label>
                             <input type="text" name="empcode" class="form-control"
-                                placeholder="Enter your employee code" pattern="[0-9]+" required>
+                                placeholder="Enter your employee code" pattern="[0-9]+" value="{{employee.empcode}}">
                         </div>
                     </div>
 
@@ -38,37 +38,39 @@
                         <div class="form-group">
                             <label>Employee Department </label>
                             <input type="text" name="department" class="form-control"
-                                placeholder="Enter your department">
+                                placeholder="Enter your department" value="{{employee.empdept}}">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
                             <label>Employee Designation </label>
                             <input type="text" name="designation" class="form-control"
-                                placeholder="Enter your designation">
+                                placeholder="Enter your designation" value="{{employee.designation}}">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
                             <label>Contact </label>
-                            <input type="text" name="contact" class="form-control" placeholder="Contact Number">
+                            <input type="text" name="contact" class="form-control" placeholder="Contact Number"
+                                value="{{employee.contact}}">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
                             <label>Email ID </label>
-                            <input type="emailid" name="email" class="form-control" placeholder="Email">
+                            <input type="emailid" name="email" class="form-control" placeholder="Email"
+                                value="{{employee.user.email}}">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label>Joining date</label>
+                            <label>Joining date[{{employee.joiningdate}}</label>
                             <input type="date" name="jdate" class="form-control">
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label>Gender</label>
+                            <label>Gender [{{employee.gender}}]</label>
                             <select name="gender" class="form-control">
                                 <option value="None">Select Gender</option>
                                 <option value="Male">Male</option>
