Day 7: Created the profile page, employee furter details tables and fixed unavoidable errors

--- a/EmployeeRecordMgmt/employee/templates/emp_base.html
+++ b/EmployeeRecordMgmt/employee/templates/emp_base.html
@@ -42,7 +42,7 @@
                     <a href="" class="list-group-item list-group-item-action">Edit My Education</a>
                     <a href="" class="list-group-item list-group-item-warning list-group-item-action">Change
                         Password</a>
-                    <a href="" class="list-group-item list-group-item-action">Logout</a>
+                    <a href="{% url 'logout' %}" class="list-group-item list-group-item-action">Logout</a>
                 </div>
             </div>
 
