--- a/EmployeeRecordMgmt/employee/templates/header.html
+++ b/EmployeeRecordMgmt/employee/templates/header.html
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-home"></i>Home</a>
+                <a class="nav-link" href="{%url 'index' %}"><i class="fa fa-home"></i>Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'registration' %}"><i class="fas fa-sign-in-alt "></i>Employee
