Day 11: Designed and fixed experience page and new user issues

--- a/EmployeeRecordMgmt/employee/templates/registration.html
+++ b/EmployeeRecordMgmt/employee/templates/registration.html
@@ -3,7 +3,7 @@
 
 <script>
     function checkpassword() {
-        if (document.signup.pwd.value != document.sigup.cpwd.value) {
+        if (document.signup.pwd.value != document.signup.cpwd.value) {
             alert('password and Repeat Password field does not match');
             document.signup.cpwd.focus();
             return false;
