Day 13: Created the Education details page and provided updations in Employee education details

--- a/EmployeeRecordMgmt/employee/templates/edit_myexperience.html
+++ b/EmployeeRecordMgmt/employee/templates/edit_myexperience.html
@@ -86,8 +86,8 @@
 
 {% if error == "no" %}
 <script>
-    alert('Employee Experience Updated  Succesfully');
-    window.location = ('{% url 'edit_experience' %}');
+    alert('Experience Detail Updated Succesfully');
+    window.location = ('{% url 'edit_myexperience' %}');
 </script>
 {% endif %}
 {% if error == "yes" %}
