--- a/EmployeeRecordMgmt/employee/templates/emp_base.html
+++ b/EmployeeRecordMgmt/employee/templates/emp_base.html
@@ -38,10 +38,12 @@
                     <a href="{% url 'profile' %}" class="list-group-item list-group-item-action">Profile</a>
                     <a href="{% url 'my_experience' %}"
                         class="list-group-item list-group-item-warning list-group-item-action">My Experience</a>
-                    <a href="{% url 'edit_experience' %}" class="list-group-item list-group-item-action">Edit My
+                    <a href="{% url 'edit_myexperience' %}" class="list-group-item list-group-item-action">Edit My
                         Experience</a>
-                    <a href="" class="list-group-item  list-group-item-warning list-group-item-action">My Education</a>
-                    <a href="" class="list-group-item list-group-item-action">Edit My Education</a>
+                    <a href="{% url 'my_education' %}"
+                        class="list-group-item  list-group-item-warning list-group-item-action">My Education</a>
+                    <a href="{% url 'edit_myeducation' %}" class="list-group-item list-group-item-action">Edit My
+                        Education</a>
                     <a href="" class="list-group-item list-group-item-warning list-group-item-action">Change
                         Password</a>
                     <a href="{% url 'logout' %}" class="list-group-item list-group-item-action">Logout</a>
