--- a/EmployeeRecordMgmt/employee/templates/profile.html
+++ b/EmployeeRecordMgmt/employee/templates/profile.html
@@ -9,7 +9,7 @@
         <h5 class="p-2 text-danger" style=" border-bottom : 2px solid orange "> Profile </h5>
 
         <div class=" container-fluid">
-            <form method="post" name="signup" onsubmit="return checkpassword()">
+            <form method="post">
                 {% csrf_token %}
                 <div class=" form-row">
                     <div class="col-sm-6">
