Day 15: designed the fucntionality for admin to access the necesary  information

--- a/EmployeeRecordMgmt/employee/templates/admin_login.html
+++ b/EmployeeRecordMgmt/employee/templates/admin_login.html
@@ -50,3 +50,17 @@
             </div>
         </div>
 </body>
+
+{% if error == "no" %}
+<script>
+    alert('Login Succesfully');
+    window.location = ('{% url 'admin_home' %}');
+</script>
+{% endif %}
+{% if error == "yes" %}
+
+<script>
+    alert('Invalid login credentials, Try Again');
+
+</script>
+{% endif %}
