Day 16: Fixed additional bugs and unavoidable errors

--- a/EmployeeRecordMgmt/employee/templates/all_employees.html
+++ b/EmployeeRecordMgmt/employee/templates/all_employees.html
@@ -34,7 +34,8 @@
                         <td>{{i.user.username}}</td>
                         <td>{{i.contact}}</td>
                         <td>{{i.joiningdate}}</td>
-                        <td>{{forloop.counter}}</td>
+                        <td>{{i.user.counter}}</td>
+
                     </tr>
                     {% endfor%}
                 </tbody>
