Day 19: Developed the readme file for the project

--- a/EmployeeRecordMgmt/employee/templates/all_employees.html
+++ b/EmployeeRecordMgmt/employee/templates/all_employees.html
@@ -22,6 +22,7 @@
                         <th>Joining Date</th>
                         <th>Actions</th>
 
+
                     </tr>
                 </thead>
                 <tbody>
@@ -34,7 +35,11 @@
                         <td>{{i.user.username}}</td>
                         <td>{{i.contact}}</td>
                         <td>{{i.joiningdate}}</td>
-                        <td>{{i.user.counter}}</td>
+                        <td>
+                            {{i.counter}}
+                        </td>
+
+
 
                     </tr>
                     {% endfor%}
